Responsive fix on small devices

--- a/style.css
+++ b/style.css
@@ -279,11 +279,12 @@ hr {
     .service-highlights {
         flex-direction: column;
         align-items: center;
+        text-align: center;
     }
 
-    .text-content, .image-content {
+    /* .text-content, .image-content {
         padding-left: 0;
-    }
+    } */
 
     .image-content img {
         position: static;
